# ray_tracer

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
examples/: CMakeLists.txt  clock.cpp  multipleSpheresPlane.cpp  patterns.cpp  perlin.cpp  projectile.cpp  raySphere.cpp  shadowPuppet.cpp
include/: canvas.h  colors.h  common.h  constants.h  graphics.h  intersection.h  light.h  material.h  matrix4x4.h  object.h  patterns.h  ray.h  reflection.h  rtmath.h  shapes.h  sphere.h  transformations.h  tuple.h  utils.h
include/graphics/: camera.h  canvas.h  colors.h  computations.h  intersection.h  light.h  ray.h  reflection.h  world.h
include/math/: constants.h  matrix.h  matrix4x4.h  perlin.h  transformations.h  tuple.h
include/patterns/: checkered_pattern.h  gradient_pattern.h  jitter.h  patterns_base.h  ring_pattern.h  striped_pattern.h  uv_checkered_pattern.h
include/shapes/: material.h  object.h  patterns.h  plane.h  sphere.h
include/utils/: equality.h
libs/catch/: CMakeLists.txt  test_main.cpp
src/: CMakeLists.txt  clock.cpp  env.cpp  multipleSpheres.cpp  projectile.cpp  raySphere.cpp  raySphereProj.cpp
src/graphics/: CMakeLists.txt  camera.cpp  canvas.cpp  computations.cpp  intersection.cpp  ray.cpp  reflection.cpp  world.cpp
src/shapes/: CMakeLists.txt  material.cpp  object.cpp  plane.cpp  sphere.cpp
tests/: CMakeLists.txt  testCamera.cpp  testCanvas.cpp  testColors.cpp  testComputations.cpp  testIntersection.cpp  testLight.cpp  testMaterial.cpp  testMatrix.cpp  testMatrix4x4.cpp  testRay.cpp  testReflection.cpp  testSphere.cpp  testTransformations.cpp  testTuple.cpp  testWorld.cpp  test_canvas.cpp  test_colors.cpp  test_intersection.cpp  test_matrix4x4.cpp  test_ray.cpp  test_reflection.cpp  test_sphere.cpp  test_transformations.cpp  test_tuple.cpp
tests/graphics/: CMakeLists.txt  testCamera.cpp  testCanvas.cpp  testColors.cpp  testComputations.cpp  testIntersection.cpp  testLight.cpp  testRay.cpp  testReflection.cpp  testWorld.cpp
tests/math/: CMakeLists.txt  testMatrix.cpp  testMatrix4x4.cpp  testPerlin.cpp  testTransformations.cpp  testTuple.cpp
tests/patterns/: CMakeLists.txt  testAllPatterns.cpp  testJitter.cpp  testPattern.cpp  testPattern.h
tests/shapes/: CMakeLists.txt  testAllPatterns.cpp  testMaterial.cpp  testObject.cpp  testObject.h  testPattern.h  testPlane.cpp  testSphere.cpp
